; ModuleID = '/home/carl/AnghaBench/git/extr_http-push.c_run_request_queue.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-push.c_run_request_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@request_queue_head = common dso_local global i64 0, align 8
@aborted = common dso_local global i32 0, align 4
@fill_active_slot = common dso_local global i32 0, align 4
@is_running_queue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @run_request_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_request_queue() #0 {
  br label %1

1:                                                ; preds = %10, %0
  %2 = call i32 (...) @finish_all_active_slots()
  br label %3

3:                                                ; preds = %1
  %4 = load i64, i64* @request_queue_head, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %3
  %7 = load i32, i32* @aborted, align 4
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  br label %10

10:                                               ; preds = %6, %3
  %11 = phi i1 [ false, %3 ], [ %9, %6 ]
  br i1 %11, label %1, label %12

12:                                               ; preds = %10
  ret void
}

declare dso_local i32 @finish_all_active_slots(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
